[package]
name = "merlin"
version = "0.1.0"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>",
           "isis agora lovecruft <isis@patternsinthevoid.net>"]

[package.metadata.docs.rs]
# We need nightly to build docs
features = ["nightly"]

[dependencies]
keccak = "0.1.0"
byteorder = "1.2.4"
clear_on_drop = "0.2.3"

[dev-dependencies]
strobe-rs = "0.3"

[features]
nightly = ["clear_on_drop/nightly"]
