[package]
name = "merlin"
version = "1.0.3"
authors = ["Henry de Valence <hdevalence@hdevalence.ca>",
           "isis agora lovecruft <isis@patternsinthevoid.net>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dalek-cryptography/merlin"
homepage = "https://docs.rs/merlin"
documentation = "https://docs.rs/merlin"
categories = ["cryptography"]
keywords = ["cryptography", "zero-knowledge", "fiat-shamir", "transcript"]
description = "Composable proof transcripts for public-coin arguments of knowledge"
exclude = [".travis.yml", ".gitignore"]

[package.metadata.docs.rs]
# We need nightly to build docs
features = ["nightly"]

[dependencies]
keccak = "0.1.0"
byteorder = "1.2.4"
clear_on_drop = "0.2.3"
rand_core = "0.3"
hex = {version = "0.3", optional = true}

[dev-dependencies]
strobe-rs = "0.3"
curve25519-dalek = "1"
rand_chacha = "0.1"
rand = "0.6"

[features]
nightly = ["clear_on_drop/nightly"]
debug-transcript = ["hex"]
