[package]
name = "subtle-derive"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/isislovecruft/subtle-derive"
documentation = "https://docs.rs/subtle-derive"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "constant-time", "utilities"]
description = "Pure-Rust traits and utilities for constant-time cryptographic implementations."
exclude = [
    ".gitignore",
    ".travis.yml",
]

[lib]
proc-macro = true

[dependencies]
syn = "^0.10"
quote = "^0.3"
