[package]
name = "subtle-derive"
version = "0.1.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
readme = "README.md"
license = "CC0-1.0"
repository = "https://github.com/isislovecruft/subtle-derive"
documentation = "https://docs.rs/subtle-derive"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "constant-time", "utilities"]
description = "Procedural macros for deriving subtle¹ trait implementations. ¹ https://github.com/isislovecruft/subtle"
exclude = [
    ".gitignore",
    ".travis.yml",
]

[lib]
proc-macro = true

[dependencies]
syn = "^0.11"
quote = "^0.3"

[dev-dependencies]
compiletest_rs = "0.2"

[dev-dependencies.subtle]
path = ".."
